[package]
name = "crypto-shuffle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = {version = "0.6.3", features = ["getrandom"]}
num-traits = "0.2.15"
num-format = "0.4.0"
