[package]
name = "safe-shuffle"
version = "0.1.1"
edition = "2021"
authors = ["erwanor"]
description = "Perform unbiased shuffles using a CSPRNG and Fisher-Yates"
keywords = ["shuffle", "permutation", "fisher-yates", "unbiased"]
categories = ["algorithms", "cryptography"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = {version = "0.6.3", features = ["getrandom"]}
num-traits = "0.2.15"
num-format = "0.4.0"
